...


    <string name="song_info_album">Album</string>
    <string name="song_info_genre">Genre</string>
    <string name="song_info_year">Year</string>
    <string name="song_info_track">Track</string>
    <string name="song_info_disc">Disc</string>
    <string name="song_info_playcount">Playcount</string>
    <string name="song_info_length">Length</string>
    <string name="song_info_size">Size</string>
    <string name="song_info_filename">Filename</string>
    <string name="song_info_rating">Rating</string>
    <string name="song_info_rated">Song rated $stars$ stars</string>
...

    <string name="tasker_intro">Please select an action.</string>
    <string name="tasker_ip_help">Enter the details you want to connect to if you selected "Connect" above. Auth code is optional if disabled in Clementine.</string>
    <string name="tasker_action">Action:</string>
    <string name="tasker_connect">Connect</string>
    <string name="tasker_disconnect">Disconnect</string>
    <string name="tasker_play">Play</string>
    <string name="tasker_pause">Pause</string>
    <string name="tasker_playpause">Play / Pause</string>
    <string name="tasker_stop">Stop</string>
    <string name="tasker_next">Next song</string>
    <string name="tasker_port_hint">Enter port</string>
    <string name="tasker_auth_hint">Enter auth code</string>
...
    <string name="repeat_track">Repeat track</string>
    <string name="repeat_album">Repeat album</string>
    <string name="repeat_playlist">Repeat playlist</string>
    <string name="shuffle_off">Don\'t shuffle</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="shuffle_inside_album">Shuffle tracks in this album</string>
    <string name="shuffle_albums">Shuffle albums</string>


    <string name="first_time_title">Welcome</string>
    <string name="first_time_text">Thank you for using Clementine Remote!\nI hope this app will be useful for you.&lt;br>&lt;br>In order to use this remote app you have to download and install Clementine 1.2.1 or higher from &lt;a href=\"http://www.clementine-player.org/downloads\">here&lt;/a>.</string>
    <string name="track_loved">Track loved &lt;3</string>
    <string name="track_banned">Track banned :-(</string>
...
